--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "my-app"
-version = "0.2.0"
+name = "cors-proxy"
+version = "0.2.1"
 authors = ["Gunter Wambaugh <gunter.wambaugh@gmail.com>"]
 edition = "2021"
 license = "MIT"
@@ -11,18 +11,16 @@ repository = "https://github.com/unixgeek/cors-proxy"
 crate-type = ["cdylib", "rlib"]
 
 [features]
-default = ["console_error_panic_hook"]
+default = []
 
 [dependencies]
 cfg-if = "0.1.2"
 worker = "0.0.7"
-
-# The `console_error_panic_hook` crate provides better debugging of panics by
-# logging them with `console.error`. This is great for development, but requires
-# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
-# code size when deploying.
+wee_alloc = "0.4.5"
 console_error_panic_hook = { version = "0.1.1", optional = true }
 
 [profile.release]
-# Tell `rustc` to optimize for small code size.
-opt-level = "s"
+opt-level = "z"
+
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = ['-Oz']
