--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cors-proxy"
-version = "0.2.1"
+version = "0.2.2"
 authors = ["Gunter Wambaugh <gunter.wambaugh@gmail.com>"]
 edition = "2021"
 license = "MIT"
@@ -16,7 +16,7 @@ default = []
 [dependencies]
 cfg-if = "0.1.2"
 worker = "0.0.7"
-wee_alloc = "0.4.5"
+#wee_alloc = "0.4.5"
 console_error_panic_hook = { version = "0.1.1", optional = true }
 
 [profile.release]
