--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cors-proxy"
-version = "0.2.3"
+version = "0.3.0"
 authors = ["Gunter Wambaugh <gunter.wambaugh@gmail.com>"]
 edition = "2021"
 license = "MIT"
@@ -10,17 +10,13 @@ repository = "https://github.com/unixgeek/cors-proxy"
 [lib]
 crate-type = ["cdylib", "rlib"]
 
-[features]
-default = []
-
 [dependencies]
-cfg-if = "0.1.2"
-worker = "0.0.8"
-wee_alloc = "0.4.5"
-console_error_panic_hook = { version = "0.1.1", optional = true }
+cfg-if = "=1.0.0"
+worker = "=0.0.11"
+console_error_panic_hook = { version = "=0.1.7", optional = true }
 
 [profile.release]
 opt-level = "z"
 
 [package.metadata.wasm-pack.profile.release]
-wasm-opt = ['-Oz']
+wasm-opt = ["-Oz"]
