--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
+  "name": "cors-proxy",
+  "version": "0.3.1",
+  "author": "Gunter Wambaugh <gunter.wambaugh@gmail.com>",
+  "license": "MIT",
+  "description": "CORS Proxy",
   "devDependencies": {
-    "wrangler": "=2.6.2"
+    "wrangler": "=2.8.0"
   }
 }
